--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,10 @@
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
-    "sass": "^1.77.6"
+    "sass": "^1.77.6",
+    "socket.io-client": "^4.7.5",
+    "timeago.js": "^4.0.2",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
